--- a/regional/pages/australia.html
+++ b/regional/pages/australia.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title australia-title">
-                <span class="australia-text">
-                    <img src="../../assets/logos/australia-wtf-logo.png" alt="Australia" class="australia-flag-logo" loading="eager" />
-                    Australia
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/australia-wtf-logo.png" alt="Australia" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Australia</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
