--- a/regional/pages/britain.html
+++ b/regional/pages/britain.html
@@ -66,9 +66,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title britain-title">
-                <span class="britain-text">
-                    <img src="../../assets/logos/britain-wtf-logo.png" alt="Britain" class="britain-flag-logo" loading="eager" />
-                    Britain
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/britain-wtf-logo.png" alt="Britain" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Britain</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
