--- a/regional/pages/canada.html
+++ b/regional/pages/canada.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title canada-title">
-                <span class="canada-text">
-                    <img src="../../assets/logos/canada-wtf-logo.png" alt="Canada" class="canada-flag-logo" loading="eager" />
-                    Canada
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/canada-wtf-logo.png" alt="Canada" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Canada</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
