--- a/regional/pages/england.html
+++ b/regional/pages/england.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title england-title">
-                <span class="england-text">
-                    <img src="../../assets/logos/england-wtf-logo.png" alt="England" class="england-flag-logo" loading="eager" />
-                    England
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/england-wtf-logo.png" alt="England" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">England</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
