--- a/regional/pages/europe.html
+++ b/regional/pages/europe.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title europe-title">
-                <span class="europe-text">
-                    <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe" class="europe-flag-logo" loading="eager" />
-                    <span class="europe-country-name">Europe</span>
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Europe</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
