--- a/regional/pages/france.html
+++ b/regional/pages/france.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title france-title">
-                <span class="france-text">
-                    <img src="../../assets/logos/france-wtf-logo.png" alt="France" class="france-flag-logo" loading="eager" />
-                    France
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/france-wtf-logo.png" alt="France" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">France</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
