--- a/regional/pages/germany.html
+++ b/regional/pages/germany.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title germany-title">
-                <span class="germany-text">
-                    <img src="../../assets/logos/germany-wtf-logo.png" alt="Germany" class="germany-flag-logo" loading="eager" />
-                    Germany
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/germany-wtf-logo.png" alt="Germany" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Germany</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
