--- a/regional/pages/ireland.html
+++ b/regional/pages/ireland.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title ireland-title">
-                <span class="ireland-text">
-                    <img src="../../assets/logos/ireland-wtf-logo.png" alt="Ireland" class="ireland-flag-logo" loading="eager" />
-                    Ireland
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/ireland-wtf-logo.png" alt="Ireland" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Ireland</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
