--- a/regional/pages/italy.html
+++ b/regional/pages/italy.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title italy-title">
-                <span class="italy-text">
-                    <img src="../../assets/logos/italy-wtf-logo.png" alt="Italy" class="italy-flag-logo" loading="eager" />
-                    Italy
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/italy-wtf-logo.png" alt="Italy" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Italy</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
