--- a/regional/pages/netherlands.html
+++ b/regional/pages/netherlands.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title netherlands-title">
-                <span class="netherlands-text">
-                    <img src="../../assets/logos/netherlands-wtf-logo.png" alt="Netherlands" class="netherlands-flag-logo" loading="eager" />
-                    Netherlands
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/netherlands-wtf-logo.png" alt="Netherlands" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Netherlands</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
