--- a/regional/pages/poland.html
+++ b/regional/pages/poland.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title poland-title">
-                <span class="poland-text">
-                    <img src="../../assets/logos/poland-wtf-logo.png" alt="Poland" class="poland-flag-logo" loading="eager" />
-                    Poland
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/poland-wtf-logo.png" alt="Poland" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Poland</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
