--- a/regional/pages/spain.html
+++ b/regional/pages/spain.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title spain-title">
-                <span class="spain-text">
-                    <img src="../../assets/logos/spain-wtf-logo.png" alt="Spain" class="spain-flag-logo" loading="eager" />
-                    Spain
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/spain-wtf-logo.png" alt="Spain" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Spain</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
