--- a/regional/pages/sweden.html
+++ b/regional/pages/sweden.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title sweden-title">
-                <span class="sweden-text">
-                    <img src="../../assets/logos/sweden-wtf-logo.png" alt="Sweden" class="sweden-flag-logo" loading="eager" />
-                    <span class="sweden-country-name">Sweden</span>
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/sweden-wtf-logo.png" alt="Sweden" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Sweden</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
