--- a/regional/pages/usa.html
+++ b/regional/pages/usa.html
@@ -67,9 +67,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title usa-title">
-                <span class="usa-text">
-                    <img src="../../assets/logos/usa-wtf-logo.png" alt="USA" class="usa-flag-logo" loading="eager" />
-                    <span class="usa-country-name">USA</span>
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/usa-wtf-logo.png" alt="USA" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">USA</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
