--- a/regional/pages/wales.html
+++ b/regional/pages/wales.html
@@ -70,9 +70,9 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title wales-title">
-                <span class="wales-text">
-                    <img src="../../assets/logos/wales-wtf-logo.png" alt="Wales" class="wales-flag-logo" loading="eager" />
-                    <span class="wales-country-name">Wales</span>
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/wales-wtf-logo.png" alt="Wales" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Wales</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
