🔁 Qoder Auto Commit (v4.2.1 sync)

--- a/regional/pages/scotland.html
+++ b/regional/pages/scotland.html
@@ -67,14 +67,14 @@
             </div>
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title scotland-title">
-                <span class="scotland-text">
-                    <img src="../../assets/logos/scotland-wtf-logo.png" alt="Scotland" class="scotland-flag-logo" loading="eager" />
-                    Scotland
+                <span class="region-logo-block">
+                    <img src="../../assets/logos/scotland-wtf-logo.png" alt="Scotland" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">Scotland</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Alba Gu Bràth — Documenting the fall in Scotland</p>
-            <p class="page-description">From Edinburgh to the Highlands, tracking civilization’s descent through Scottish eyes</p>
+            <p class="page-description">From Edinburgh to the Highlands, tracking civilization's descent through Scottish eyes</p>
         </div>
     </section>
 
@@ -253,5 +253,6 @@
     </script>
 </body>
 </html>
-   
+  
+ 
  
