🔁 Qoder Auto Commit (v4.2.1 sync)

--- a/feed.html
+++ b/feed.html
@@ -70,7 +70,7 @@
 
                 <!-- Europe Category -->
                 <a href="regional/pages/europe-directory.html" class="hub-card">
-                    <img src="assets/logos/europe-wtf-logo.jpg" alt="Europe" class="hub-logo">
+                    <img src="assets/logos/europe-wtf-logo.png" alt="Europe" class="hub-logo">
                     <h3>Europe</h3>
                     <p>Continental European nations</p>
                     <span class="hub-stat">8 Hubs</span>
@@ -86,7 +86,7 @@
 
                 <!-- AI & Tech Category -->
                 <a href="regional/pages/ai-directory.html" class="hub-card ai-glow">
-                    <img src="assets/logos/ai-wtf-logo.webp" alt="AI & Tech" class="hub-logo">
+                    <img src="assets/logos/ai-wtf-logo.png" alt="AI & Tech" class="hub-logo">
                     <h3>AI & Tech</h3>
                     <p>Artificial intelligence and technology</p>
                     <span class="hub-stat">2 Hubs</span>
