🔁 Qoder Auto Commit (v4.2.1 sync)

--- a/feed.html
+++ b/feed.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -78,7 +78,7 @@
 
                 <!-- The West Category -->
                 <a href="regional/pages/thewest-directory.html" class="hub-card">
-                    <img src="assets/logos/the-west-wtf.jpg" alt="The West" class="hub-logo">
+                    <img src="assets/logos/the-west-wtf.png" alt="The West" class="hub-logo">
                     <h3>The West</h3>
                     <p>Western nations and democracies</p>
                     <span class="hub-stat">4 Hubs</span>
@@ -86,7 +86,7 @@
 
                 <!-- AI & Tech Category -->
                 <a href="regional/pages/ai-directory.html" class="hub-card ai-glow">
-                    <img src="assets/logos/ai-wtf-logo.png" alt="AI & Tech" class="hub-logo">
+                    <img src="assets/logos/ai-wtf-logo.webp" alt="AI & Tech" class="hub-logo">
                     <h3>AI & Tech</h3>
                     <p>Artificial intelligence and technology</p>
                     <span class="hub-stat">2 Hubs</span>
