🔁 Qoder Auto Commit (v4.2.1 sync)

--- a/backups/qoder_autosave/australia_pre_v4.1_20251103_1500.html
+++ b/backups/qoder_autosave/australia_pre_v4.1_20251103_1500.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Down Under, Going Down - Watching Australia's unraveling</p>
-            <p class="page-description">Recording Australia's decline</p>
+            <p class="page-description">From Sydney to the outback, documenting the decline of the Lucky Country</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/australia-wtf-logo.png" alt="Australia WTF" loading="lazy">
-                    <p>Recording Australia's decline</p>
+                    <p>Documenting the fall of Australia</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
