--- a/backups/qoder_autosave/scotland_pre_v4.1_20251103_1500.html
+++ b/backups/qoder_autosave/scotland_pre_v4.1_20251103_1500.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Alba Gu Bràth — Documenting the fall in Scotland</p>
-            <p class="page-description">Recording Scotland's decline</p>
+            <p class="page-description">From Edinburgh to the Highlands, tracking civilization's descent through Scottish eyes</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/scotland-wtf-logo.png" alt="Scotland WTF" loading="lazy">
-                    <p>Recording Scotland's decline</p>
+                    <p>Documenting the fall in Alba</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
