--- a/backups/regional_pre_v4.3_australia_20251103_153402.html
+++ b/backups/regional_pre_v4.3_australia_20251103_153402.html
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Down Under, Going Down - Watching Australia's unraveling</p>
-            <p class="page-description">Recording Australia's decline</p>
+            <p class="page-description">From Sydney to the outback, documenting the decline of the Lucky Country</p>
         </div>
     </section>
 
@@ -138,22 +138,6 @@
                     <span class="btn-icon"><i class="fab fa-tiktok"></i></span>
                     <span class="btn-text">TikTok</span>
                 </a>
-                <a href="https://x.com/australiawtf" target="_blank" class="action-btn x-btn">
-                    <span class="btn-icon"><i class="fab fa-x-twitter"></i></span>
-                    <span class="btn-text">X</span>
-                </a>
-                <a href="https://www.youtube.com/@australiawtf" target="_blank" class="action-btn youtube-btn">
-                    <span class="btn-icon"><i class="fab fa-youtube"></i></span>
-                    <span class="btn-text">YouTube</span>
-                </a>
-                <a href="https://www.threads.net/@australiawtf" target="_blank" class="action-btn threads-btn">
-                    <span class="btn-icon"><i class="fab fa-threads"></i></span>
-                    <span class="btn-text">Threads</span>
-                </a>
-                <a href="../../watchthefallrecords.html" class="action-btn shop-btn">
-                    <span class="btn-icon"><i class="fas fa-shopping-cart"></i></span>
-                    <span class="btn-text">WTF Creations</span>
-                </a>
                 <a href="#support" class="action-btn support-btn">
                     <span class="btn-icon"><i class="fas fa-hand-holding-usd"></i></span>
                     <span class="btn-text">Support Us</span>
@@ -175,7 +159,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/australia-wtf-logo.png" alt="Australia WTF" loading="lazy">
-                    <p>Recording Australia's decline</p>
+                    <p>Documenting the fall of Australia</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
