--- a/regional/pages/britain.html
+++ b/regional/pages/britain.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -73,7 +73,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">God Save the King — Documenting Britain's cultural unravelling</p>
-            <p class="page-description">From London to the provinces, tracking the decline of a once-great empire</p>
+            <p class="page-description">Recording Britain's decline</p>
         </div>
     </section>
 
@@ -173,7 +173,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/britain-wtf-logo.png" alt="Britain WTF" loading="lazy">
-                    <p>Documenting the fall of Britain</p>
+                    <p>Recording Britain's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
