--- a/regional/pages/canada.html
+++ b/regional/pages/canada.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">True North Strong and Free (For Now) - Following Canada's social decay</p>
-            <p class="page-description">From Vancouver to Toronto, following Canada's social decay</p>
+            <p class="page-description">Recording Canada's decline</p>
         </div>
     </section>
 
@@ -130,7 +130,7 @@
         <div class="container">
             <h2 class="section-title">Connect & Support</h2>
             <div class="action-buttons">
-                <a href="https://www.instagram.com/canadawtf_/" target="_blank" class="action-btn instagram-btn">
+                <a href="https://www.instagram.com/canada.wtf" target="_blank" class="action-btn instagram-btn">
                     <span class="btn-icon"><i class="fab fa-instagram"></i></span>
                     <span class="btn-text">Instagram</span>
                 </a>
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/canada-wtf-logo.png" alt="Canada WTF" loading="lazy">
-                    <p>Documenting the fall of Canada</p>
+                    <p>Recording Canada's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
