--- a/regional/pages/france.html
+++ b/regional/pages/france.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Liberte, Egalite, Fragilite - Observing France's ongoing crisis</p>
-            <p class="page-description">From Paris to the provinces, documenting France's decline</p>
+            <p class="page-description">Recording France's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/france-wtf-logo.png" alt="France WTF" loading="lazy">
-                    <p>Documenting the fall of France</p>
+                    <p>Recording France's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
