--- a/regional/pages/italy.html
+++ b/regional/pages/italy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">L'Italia - Recording Italy's decline</p>
-            <p class="page-description">From Rome to Milan, recording Italy's decline</p>
+            <p class="page-description">Recording Italy's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/italy-wtf-logo.png" alt="Italy WTF" loading="lazy">
-                    <p>Documenting the fall of Italy</p>
+                    <p>Recording Italy's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
