--- a/regional/pages/poland.html
+++ b/regional/pages/poland.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Polska - Tracking Poland's transformation</p>
-            <p class="page-description">From Warsaw to the borders, tracking Poland's transformation</p>
+            <p class="page-description">Recording Poland's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/poland-wtf-logo.png" alt="Poland WTF" loading="lazy">
-                    <p>Documenting the fall of Poland</p>
+                    <p>Recording Poland's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
