--- a/regional/pages/spain.html
+++ b/regional/pages/spain.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Viva Espana - Documenting Spain's decline</p>
-            <p class="page-description">From Madrid to Barcelona, documenting Spain's decline</p>
+            <p class="page-description">Recording Spain's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/spain-wtf-logo.png" alt="Spain WTF" loading="lazy">
-                    <p>Documenting the fall of Spain</p>
+                    <p>Recording Spain's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
