--- a/regional/pages/usa.html
+++ b/regional/pages/usa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -68,13 +68,13 @@
             <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" loading="eager" />
             <h1 class="page-title usa-title">
                 <span class="region-logo-block">
-                    <img src="../../assets/logos/usa-wtf-logo.png" alt="USA" class="region-flag-logo" loading="eager" />
-                    <span class="region-name">USA</span>
+                    <img src="../../assets/logos/usa-wtf-logo.png" alt="USAmerica" class="region-flag-logo" loading="eager" />
+                    <span class="region-name">USAmerica</span>
                 </span>
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">United We Fall - Tracking America's decline</p>
-            <p class="page-description">From coast to coast, documenting the American empire's collapse</p>
+            <p class="page-description">Recording USAmerica's decline</p>
         </div>
     </section>
 
@@ -174,8 +174,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="../../assets/logos/usa-wtf-logo.png" alt="USA WTF" loading="lazy">
-                    <p>Documenting the fall of USA</p>
+                    <img src="../../assets/logos/usa-wtf-logo.png" alt="USAmerica WTF" loading="lazy">
+                    <p>Recording USAmerica's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
