--- a/backups/qoder_autosave/europe_pre_v4.1_20251103_1501.html
+++ b/backups/qoder_autosave/europe_pre_v4.1_20251103_1501.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -70,14 +70,14 @@
       </div>
       <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" />
       <h1 class="page-title europe-title">
-                <span class="region-logo-block">
-                    <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe" class="region-flag-logo" loading="eager" />
-                    <span class="region-name">Europe</span>
-                </span>
-                <span class="wtf-text">WatchTheFall</span>
-            </h1>
+        <span class="region-logo-block">
+          <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe" class="region-flag-logo" onerror="this.style.display='none'" />
+          <span class="region-name">Europe</span>
+        </span>
+        <span class="wtf-text">WatchTheFall</span>
+      </h1>
       <p class="page-subtitle">In Varietate Concordia - Recording Europe's decline</p>
-      <p class="page-description">Recording Europe's decline</p>
+      <p class="page-description">Across the continent, witnessing Europe's transformation</p>
     </div>
   </section>
 
@@ -133,35 +133,28 @@
     <div class="container">
       <h2 class="section-title">Connect & Support</h2>
       <div class="action-buttons">
-                <a href="https://www.instagram.com/europe.wtf" target="_blank" class="action-btn instagram-btn">
-                    <span class="btn-icon"><i class="fab fa-instagram"></i></span>
-                    <span class="btn-text">Instagram</span>
-                </a>
-                <a href="https://www.tiktok.com/@europe.wtf" target="_blank" class="action-btn tiktok-btn">
-                    <span class="btn-icon"><i class="fab fa-tiktok"></i></span>
-                    <span class="btn-text">TikTok</span>
-                </a>
-                <a href="https://x.com/europewtf" target="_blank" class="action-btn x-btn">
-                    <span class="btn-icon"><i class="fab fa-x-twitter"></i></span>
-                    <span class="btn-text">X</span>
-                </a>
-                <a href="https://www.youtube.com/@europewtf" target="_blank" class="action-btn youtube-btn">
-                    <span class="btn-icon"><i class="fab fa-youtube"></i></span>
-                    <span class="btn-text">YouTube</span>
-                </a>
-                <a href="https://www.threads.net/@europewtf" target="_blank" class="action-btn threads-btn">
-                    <span class="btn-icon"><i class="fab fa-threads"></i></span>
-                    <span class="btn-text">Threads</span>
-                </a>
-                <a href="../../watchthefallrecords.html" class="action-btn shop-btn">
-                    <span class="btn-icon"><i class="fas fa-shopping-cart"></i></span>
-                    <span class="btn-text">WTF Creations</span>
-                </a>
-                <a href="#support" class="action-btn support-btn">
-                    <span class="btn-icon"><i class="fas fa-hand-holding-usd"></i></span>
-                    <span class="btn-text">Support Us</span>
-                </a>
-            </div>
+        <a href="https://www.instagram.com/europe.wtf" target="_blank" class="action-btn instagram-btn">
+          <span class="btn-icon"><i class="fab fa-instagram"></i></span><span class="btn-text">Instagram</span>
+        </a>
+        <a href="https://www.tiktok.com/@europe.wtf" target="_blank" class="action-btn tiktok-btn">
+          <span class="btn-icon"><i class="fab fa-tiktok"></i></span><span class="btn-text">TikTok</span>
+        </a>
+        <a href="https://x.com/europewtf" target="_blank" class="action-btn x-btn">
+          <span class="btn-icon"><i class="fab fa-x-twitter"></i></span><span class="btn-text">X</span>
+        </a>
+        <a href="https://www.youtube.com/@europewtf" target="_blank" class="action-btn youtube-btn">
+          <span class="btn-icon"><i class="fab fa-youtube"></i></span><span class="btn-text">YouTube</span>
+        </a>
+        <a href="https://www.threads.net/@europewtf" target="_blank" class="action-btn threads-btn">
+          <span class="btn-icon"><i class="fab fa-threads"></i></span><span class="btn-text">Threads</span>
+        </a>
+        <a href="../../watchthefallrecords.html" class="action-btn shop-btn">
+          <span class="btn-icon"><i class="fas fa-shopping-cart"></i></span><span class="btn-text">WTF Creations</span>
+        </a>
+        <a href="#support" class="action-btn support-btn">
+          <span class="btn-icon"><i class="fas fa-hand-holding-usd"></i></span><span class="btn-text">Support Us</span>
+        </a>
+      </div>
     </div>
   </section>
 
@@ -170,9 +163,9 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-brand">
-                    <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe WTF" loading="lazy">
-                    <p>Recording Europe's decline</p>
-                </div>
+          <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe WTF" />
+          <p>Recording Europe's decline</p>
+        </div>
         <div class="footer-links">
           <h4>Quick Links</h4>
           <ul>
