--- a/backups/regional_pre_v4.3_europe_20251103_153402.html
+++ b/backups/regional_pre_v4.3_europe_20251103_153402.html
@@ -70,14 +70,14 @@
       </div>
       <img src="../../assets/logos/wtf-logo.png" alt="WatchTheFall" class="hero-wtf-logo" />
       <h1 class="page-title europe-title">
-                <span class="region-logo-block">
-                    <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe" class="region-flag-logo" loading="eager" />
-                    <span class="region-name">Europe</span>
-                </span>
-                <span class="wtf-text">WatchTheFall</span>
-            </h1>
+        <span class="region-logo-block">
+          <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe" class="region-flag-logo" onerror="this.style.display='none'" />
+          <span class="region-name">Europe</span>
+        </span>
+        <span class="wtf-text">WatchTheFall</span>
+      </h1>
       <p class="page-subtitle">In Varietate Concordia - Recording Europe's decline</p>
-      <p class="page-description">Recording Europe's decline</p>
+      <p class="page-description">Across the continent, witnessing Europe's transformation</p>
     </div>
   </section>
 
@@ -149,14 +149,6 @@
                     <span class="btn-icon"><i class="fab fa-youtube"></i></span>
                     <span class="btn-text">YouTube</span>
                 </a>
-                <a href="https://www.threads.net/@europewtf" target="_blank" class="action-btn threads-btn">
-                    <span class="btn-icon"><i class="fab fa-threads"></i></span>
-                    <span class="btn-text">Threads</span>
-                </a>
-                <a href="../../watchthefallrecords.html" class="action-btn shop-btn">
-                    <span class="btn-icon"><i class="fas fa-shopping-cart"></i></span>
-                    <span class="btn-text">WTF Creations</span>
-                </a>
                 <a href="#support" class="action-btn support-btn">
                     <span class="btn-icon"><i class="fas fa-hand-holding-usd"></i></span>
                     <span class="btn-text">Support Us</span>
@@ -170,9 +162,9 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-brand">
-                    <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe WTF" loading="lazy">
-                    <p>Recording Europe's decline</p>
-                </div>
+          <img src="../../assets/logos/europe-wtf-logo.png" alt="Europe WTF" />
+          <p>Recording Europe's decline</p>
+        </div>
         <div class="footer-links">
           <h4>Quick Links</h4>
           <ul>
