--- a/regional/pages/england.html
+++ b/regional/pages/england.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">St George - Witnessing England's descent</p>
-            <p class="page-description">From city streets to countryside, documenting the decline of the English nation</p>
+            <p class="page-description">Recording England's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/england-wtf-logo.png" alt="England WTF" loading="lazy">
-                    <p>Documenting the fall of England</p>
+                    <p>Recording England's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
