--- a/regional/pages/germany.html
+++ b/regional/pages/germany.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Einigkeit und Recht und Freiheit - Monitoring the collapse of German stability</p>
-            <p class="page-description">From Berlin to Munich, witnessing Germany's transformation</p>
+            <p class="page-description">Recording Germany's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/germany-wtf-logo.png" alt="Germany WTF" loading="lazy">
-                    <p>Documenting the fall of Germany</p>
+                    <p>Recording Germany's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
