--- a/regional/pages/ireland.html
+++ b/regional/pages/ireland.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Eire Go Brach - Tracking Ireland's unraveling</p>
-            <p class="page-description">From Dublin to the countryside, witnessing Ireland's transformation</p>
+            <p class="page-description">Recording Ireland's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/ireland-wtf-logo.png" alt="Ireland WTF" loading="lazy">
-                    <p>Documenting the fall of Ireland</p>
+                    <p>Recording Ireland's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
