--- a/regional/pages/netherlands.html
+++ b/regional/pages/netherlands.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Nederland - Following the fall of Dutch sanity</p>
-            <p class="page-description">From Amsterdam to Rotterdam, following the fall of Dutch sanity</p>
+            <p class="page-description">Recording Netherlands's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/netherlands-wtf-logo.png" alt="Netherlands WTF" loading="lazy">
-                    <p>Documenting the fall of Netherlands</p>
+                    <p>Recording Netherlands's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
