--- a/regional/pages/sweden.html
+++ b/regional/pages/sweden.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,7 +74,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Sverige - Observing Sweden's transformation</p>
-            <p class="page-description">From Stockholm to Malmö, observing Sweden's transformation</p>
+            <p class="page-description">Recording Sweden's decline</p>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/sweden-wtf-logo.png" alt="Sweden WTF" loading="lazy">
-                    <p>Documenting the fall of Sweden</p>
+                    <p>Recording Sweden's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
