--- a/regional/pages/wales.html
+++ b/regional/pages/wales.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -77,7 +77,7 @@
                 <span class="wtf-text">WatchTheFall</span>
             </h1>
             <p class="page-subtitle">Cymru Am Byth - Witnessing the decay of Wales</p>
-            <p class="page-description">From Cardiff to the valleys, witnessing the decay of Wales</p>
+            <p class="page-description">Recording Wales's decline</p>
         </div>
     </section>
 
@@ -178,7 +178,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <img src="../../assets/logos/wales-wtf-logo.png" alt="Wales WTF" loading="lazy">
-                    <p>Documenting the fall of Wales</p>
+                    <p>Recording Wales's decline</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
