Fix Regional Directory links to match actual subpage filenames - Britain: britain-directory.html  britain.html - Added all Europe region links (Europe, Ireland, France, Germany, Netherlands, Poland, Italy, Sweden) - Added all West region links (USA, Canada, Australia) - Added England and Wales links - All directory links now point to correct regional/pages/*.html files

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
                     </div>
                     <p class="category-desc">United Kingdom and constituent nations</p>
                     <div class="hub-links collapsed">
-                        <a href="regional/pages/britain-directory.html" class="hub-link">Britain</a>
+                        <a href="regional/pages/britain.html" class="hub-link">Britain</a>
                         <a href="regional/pages/scotland.html" class="hub-link">Scotland</a>
-                        <a href="#" class="hub-link">England</a>
-                        <a href="#" class="hub-link">Wales</a>
+                        <a href="regional/pages/england.html" class="hub-link">England</a>
+                        <a href="regional/pages/wales.html" class="hub-link">Wales</a>
                         <a href="#" class="hub-link">Northern Ireland</a>
                     </div>
                 </div>
@@ -148,14 +148,14 @@
                     </div>
                     <p class="category-desc">Continental European nations</p>
                     <div class="hub-links collapsed">
-                        <a href="#" class="hub-link">Europe</a>
-                        <a href="#" class="hub-link">Ireland</a>
-                        <a href="#" class="hub-link">France</a>
-                        <a href="#" class="hub-link">Germany</a>
-                        <a href="#" class="hub-link">Netherlands</a>
-                        <a href="#" class="hub-link">Poland</a>
-                        <a href="#" class="hub-link">Italy</a>
-                        <a href="#" class="hub-link">Sweden</a>
+                        <a href="regional/pages/europe.html" class="hub-link">Europe</a>
+                        <a href="regional/pages/ireland.html" class="hub-link">Ireland</a>
+                        <a href="regional/pages/france.html" class="hub-link">France</a>
+                        <a href="regional/pages/germany.html" class="hub-link">Germany</a>
+                        <a href="regional/pages/netherlands.html" class="hub-link">Netherlands</a>
+                        <a href="regional/pages/poland.html" class="hub-link">Poland</a>
+                        <a href="regional/pages/italy.html" class="hub-link">Italy</a>
+                        <a href="regional/pages/sweden.html" class="hub-link">Sweden</a>
                     </div>
                 </div>
 
@@ -168,9 +168,9 @@
                     <p class="category-desc">Western nations and democracies</p>
                     <div class="hub-links collapsed">
                         <a href="#" class="hub-link">The West</a>
-                        <a href="#" class="hub-link">USA</a>
-                        <a href="#" class="hub-link">Canada</a>
-                        <a href="#" class="hub-link">Australia</a>
+                        <a href="regional/pages/usa.html" class="hub-link">USA</a>
+                        <a href="regional/pages/canada.html" class="hub-link">Canada</a>
+                        <a href="regional/pages/australia.html" class="hub-link">Australia</a>
                     </div>
                 </div>
 
